# attempt2-mirror

./: .gitignore  .gitlab-ci.yml  .pylintrc  README.md  set-env-windows.ps1  setup.py
cmlpytools/ARS/: ARS.py  __init__.py  gitutils.py
cmlpytools/logparse/: __init__.py  cmd.py  parse.py
cmlpytools/minfs/: __init__.py  binary_data.py  calmap_file.py  command_parser.py  file.py  file_base.py  file_system.py  file_types.py  regmap_cfg_file.py  regmap_namespace_merger.py  regmap_struct_file.py  shared.py  utilities.py
cmlpytools/tahini/: __init__.py  cmap_schema.py  input_json_schema.py  legacy_json_converter.py  legacy_json_to_header.py  legacy_regmap_schema.py  schema.py  search.py  tahini.py  tahini_add_json_info.py  tahini_cmap.py  tahini_crc.py  tahini_generate_api_cheader.py  tahini_generate_appnote_csv.py  tahini_generate_flat_txt.py  tahini_generate_legacy_regmap.py  tahini_generate_txt.py  tahini_gimli.py  tahini_remove_param_prefix.py  tahini_version.py  test_combine_json.py  version_schema.py
cmlpytools/tahini/gimli/: .gitignore  CMakeLists.txt  README.md  gimli.cpp
cmlpytools/tahini/gimli/test/: CMakeLists.txt  c_to_json_1.c  c_to_json_2.c  c_to_json_3.c  c_to_json_4.c  c_to_json_5.c  c_to_json_6.c  c_to_json_7.c  c_to_json_full.c  c_to_json_full.h
cmlpytools/tahini/json_combination_tests/: combined_json_output.json  expected_combined_json1.json  expected_combined_json3.json  extra_regmap_info2.json  extra_regmap_info3.json  test_combine_json.py
doc/: addjsoninfo.md  logparse.md  minfs-uml.vsdx  minfs.md  tahini.md
tests/logparse/: __init__.py  test_filterlabels.py  test_renderformat.py  test_tags.py
tests/logparse/sample1/: input.md  output_all.md  output_bar.md  output_foo.md  output_foo_bar.md  output_none.md
tests/minfs/: test_BinaryData.py  test_CalmapFile.py  test_File.py  test_FileSystem.py  test_RegmapCfgFile.py  test_RegmapCfgMergeFile.py  test_RegmapStructFile.py  test_Shared.py
tests/minfs/data/: 2wire-params-1.json  2wire-params.json  4wire-params-1.json  4wire-params-2.json  4wire-params-incorrect.json  4wire-params.json  8wire-params-thorough.json  8wire-params.json  README.md  calmap_file_valid.json  calmap_invalid_fw_regs.json  calmap_invalid_persist.json  calmap_invalid_register.json  calmap_missing_bytes.json  calmap_missing_offset.json  calmap_missing_type.json  calmap_missing_valid_flag.json  calmap_regmap_cmapsource.json  haptics-regmap_cmapsource.json  haptics_regmap_cfg_correct.json  haptics_regmap_cfg_incorrect_flag.json  haptics_regmap_cfg_incorrect_member.json  haptics_regmap_cfg_incorrect_register.json  haptics_regmap_distances.json  shared-cml-lib-regmap-2wire-noaxis_cmapsource.json  shared-cml-lib-regmap-2wire-with-gs_cmapsource.json  shared-cml-lib-regmap-2wire_cmapsource.json  shared-cml-lib-regmap-8wire_cmapsource.json  shared-cml-lib-regmap_cmapsource.json  test_dual_act_act0.json  (+12 more)
tests/tahini/: test_cmap_schema.py  test_combine_json.py  test_input_json_schema.py  test_legacy_converter.py  test_legacy_regmap.py  test_remove_param_prefix.py  test_search.py  test_tahini_cmap.py  test_tahini_generate_apicheader.py  test_tahini_generate_csv.py  test_tahini_generate_flat.py  test_tahini_generate_txt.py  test_version_schema.py
(+67 files in other folders)
